[tool.poetry]
name = "knowme"
version = "0.1.0"
description = ""
authors = ["abhinavkashyap <abhinav@comp.nus.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
langchain = "^0.2.1"
ipykernel = "^6.29.4"
langchain-openai = "^0.1.8"
black = "^24.4.2"
langchain-community = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
